--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -56,7 +56,7 @@ const currentPath = Astro.url.pathname;
       navItems.map(({ path, label }) => (
         <a
           href={path}
-          class={`-m-1.5 p-1.5 font-semibold text-gray-900 hover:text-talamau-brown ${currentPath === path || currentPath === `${path}/` ? "text-talamau-brown" : ""}`}
+          class={`-m-1.5 p-1.5 font-semibold hover:text-porsche-600 ${currentPath === path || currentPath === `${path}/` ? "text-porsche-600 dark:text-porsche-400" : "text-porsche-950 dark:text-porsche-50"}`}
         >
           {label}
         </a>
@@ -109,7 +109,7 @@ const currentPath = Astro.url.pathname;
               navItems.map(({ path, label }) => (
                 <a
                   href={path}
-                  class={`-m-1.5 p-1.5 font-semibold text-gray-900 hover:text-talamau-brown ${currentPath === path || currentPath === `${path}/` ? "text-talamau-brown" : ""}`}
+                  class={`-m-1.5 p-1.5 font-semibold hover:text-porsche-500 ${currentPath === path || currentPath === `${path}/` ? "text-porsche-500" : "text-porsche-950"}`}
                 >
                   {label}
                 </a>
