--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import rodentSvg from "../assets/icons/mammals.svg";
         class="block mx-auto sm:w-2/3"
       />
     </div>
-    <div class="mx-auto max-w-2xl py-8 sm:py-24 lg:py-16">
+    <div class="mx-auto max-w-2xl py-8 sm:py-24 lg:py-24">
       <div class="text-center item-center">
         <img
           class="block mx-auto h-32 lg:h-48 rounded-full sm:mx-auto"
@@ -62,7 +62,7 @@ import rodentSvg from "../assets/icons/mammals.svg";
       </div>
     </div>
     <div
-      class="grid bg-gradient-to-r from-porsche-400 to-chetwode-200 lg:grid-cols-3 gap-4 text-center rounded-2xl lg:rounded-full mt-16 mx-40"
+      class="grid bg-gradient-to-r from-porsche-400 to-chetwode-200 dark:from-porsche-700 dark:to-chetwode-600 lg:grid-cols-3 gap-4 text-center rounded-2xl lg:rounded-full mt-8 mx-8 lg:mx-40"
     >
       <Stats title="Fieldwork" value="30" unit="localities" url="/fieldwork" />
       <Stats
