--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,4 +1,6 @@
 ---
+import Icons from "./Icons.astro";
+
 const navItems = [
   { path: "/", label: "About" },
   { path: "/projects", label: "Projects" },
@@ -16,17 +18,8 @@ const currentPath = Astro.url.pathname;
   <div class="flex lg:flex-1">
     <a href="/" class="-m-1.5 p-1.5">
       <span class="sr-only">Heru Handika</span>
-      <img
-        class="h-8 w-auto block dark:hidden"
-        src="/favicon.svg"
-        alt="handika research logo"
-      />
-      <img
-        class="h-8 w-auto hidden dark:block"
-        src="/favicon-dark.svg"
-        alt="handika research logo"
-      />
     </a>
+    <Icons />
   </div>
   <div class="flex lg:hidden">
     <button
@@ -36,11 +29,10 @@ const currentPath = Astro.url.pathname;
     >
       <span class="sr-only">Open main menu</span>
       <svg
-        class="h-6 w-6"
+        class="h-6 w-6 stroke-porsche-950 dark:stroke-porsche-50"
         fill="none"
         viewBox="0 0 24 24"
         stroke-width="1.5"
-        stroke="currentColor"
         aria-hidden="true"
         data-slot="icon"
       >
@@ -56,7 +48,7 @@ const currentPath = Astro.url.pathname;
       navItems.map(({ path, label }) => (
         <a
           href={path}
-          class={`-m-1.5 p-1.5 font-semibold hover:text-porsche-600 ${currentPath === path || currentPath === `${path}/` ? "text-porsche-600 dark:text-porsche-400" : "text-porsche-950 dark:text-porsche-50"}`}
+          class={`-m-1.5 p-1.5 font-semibold hover:text-porsche-500 ${currentPath === path || currentPath === `${path}/` ? "text-porsche-600 dark:text-porsche-400" : "text-porsche-950 dark:text-porsche-50"}`}
         >
           {label}
         </a>
@@ -69,16 +61,12 @@ const currentPath = Astro.url.pathname;
   <!-- Background backdrop, show/hide based on slide-over state. -->
   <div class="fixed inset-0 z-50">
     <div
-      class="fixed bg-white inset-y-0 right-0 z-50 w-full overflow-y-auto px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
+      class="fixed bg-porsche-200 dark:bg-porsche-950 inset-y-0 right-0 z-50 w-full overflow-y-auto px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
     >
       <div class="flex items-center justify-between">
         <a href="#" class="-m-1.5 p-1.5">
           <span class="sr-only">Heru Handika</span>
-          <img
-            class="h-8 w-auto"
-            src="/favicon.svg"
-            alt="handika research logo"
-          />
+          <Icons />
         </a>
         <button
           id="close-button"
@@ -87,11 +75,10 @@ const currentPath = Astro.url.pathname;
         >
           <span class="sr-only">Close menu</span>
           <svg
-            class="h-6 w-6"
+            class="h-6 w-6 stroke-porsche-950 dark:stroke-porsche-50"
             fill="none"
             viewBox="0 0 24 24"
             stroke-width="1.5"
-            stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
           >
@@ -104,12 +91,12 @@ const currentPath = Astro.url.pathname;
       </div>
       <div class="mt-6 flow-root">
         <div class="-my-6 divide-y divide-gray-500/10">
-          <div class="space-y-2 py-6">
+          <div class="space-y-2 py-6 font-semibold">
             {
               navItems.map(({ path, label }) => (
                 <a
                   href={path}
-                  class={`-m-1.5 p-1.5 font-semibold hover:text-porsche-500 ${currentPath === path || currentPath === `${path}/` ? "text-porsche-500" : "text-porsche-950"}`}
+                  class={`-mx-3 block rounded-lg px-3 py-2 text-base/7 hover:text-porsche-500 ${currentPath === path || currentPath === `${path}/` ? "text-porsche-600 dark:text-porsche-400" : "text-porsche-950 dark:text-porsche-50"}`}
                 >
                   {label}
                 </a>
