--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -1,9 +1,5 @@
 ---
-interface Content {
-  text: string;
-}
 
-const { text } = Astro.props;
 ---
 
-<p class="dark:text-slate-400 text-slate-500">{text}</p>
+<p class="text-chetwode-950 dark:text-chetwode-50"><slot /></p>
