--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -8,6 +8,8 @@ const { title, subtitle } = Astro.props;
 ---
 
 <div class="mt-8 mb-2">
-  <h2 class="text-2xl text-orange-400">{title}</h2>
-  <h3 class="dark:text-slate-200 text-slate-800">{subtitle}</h3>
+  <h2 class="text-2xl font-serif text-porsche-600 dark:text-porsche-400">
+    {title}
+  </h2>
+  <h3 class="text-porsche-800 dark:text-porsche-100">{subtitle}</h3>
 </div>
