--- a/src/layouts/Publication.astro
+++ b/src/layouts/Publication.astro
@@ -3,7 +3,7 @@ const { year } = Astro.props;
 ---
 
 <div class="mt-4 mb-2">
-  <h2 class="text-2xl text-talamau-brown">
+  <h2 class="text-2xl text-porsche-800 dark:text-porsche-200">
     {year}
   </h2>
   <slot />
