--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,11 +27,13 @@ import rodentSvg from "../assets/icons/mammals.svg";
           src={profilePhoto.src}
           alt="Handika's profile photo"
         />
-        <h1 class="font-serif text-5xl dark:text-white text-gray-800 py-4">
+        <h1
+          class="font-serif text-5xl text-chetwode-950 dark:text-chetwode-50 py-4"
+        >
           Hi, I'm <strong>Heru Handika</strong>
         </h1>
         <p
-          class="mt-2 text-pretty text-lg font-medium text-slate-500 dark:text-slate-400 sm:text-xl/8"
+          class="mt-2 text-pretty text-lg font-medium text-slate-600 dark:text-slate-300 sm:text-xl/8"
         >
           I study small mammal diversity and speciation on islands and develop
           software to improve data integration and management, promote
