--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -26,7 +26,7 @@ import Content from "../components/Content.astro";
           title="Small Mammal Diversity & Speciation"
           subtitle="Understanding patterns that generate species diversity within a complex island system"
         />
-        <p class="dark:text-slate-400 text-slate-500">
+        <Content>
           Indo-Australian Archipelago is among the most complex island system on
           earth. Some islands, such as Sumatra, Java, and Borneo, were
           continuous landmass during the Pleistocene low see level, called Sunda
@@ -36,11 +36,11 @@ import Content from "../components/Content.astro";
           opportunities for speciation. We work on deciphering small mammal
           diversity and evolution in this complex island system, with particular
           focus on Sulawesi and the Sunda Shelf.
-        </p>
+        </Content>
         <h3 class="dark:text-slate-200 text-slate-800 mt-8">
           In situ diversification of Hill Rats (<i>Bunomys</i>) on Sulawesi
         </h3>
-        <p class="dark:text-slate-400 text-slate-500">
+        <Content>
           The hill-rat species group, also referred as the
           <i>Bunomys</i> Clade, is the most diverse endemic rodent group on Sulawesi.
           From a single known colonizing ancestor, the group has diversified into
@@ -52,8 +52,8 @@ import Content from "../components/Content.astro";
           evolution of small mammals in complex island systems. It will also provide
           an improved understanding of species distribution to inform conservation
           efforts on Sulawesi.
-        </p>
-        <p class="dark:text-slate-400 text-slate-500">
+        </Content>
+        <Content>
           Publications:<br />
           Handika et. al. (In prep)<br />
           Handika et. al. (2021) [<a
@@ -63,7 +63,7 @@ import Content from "../components/Content.astro";
           </a>] [<a href="https://doi.org/10.1111/zsc.12460" target="_blank"
             >request pdf</a
           >]
-        </p><div
+        </Content><div
           class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]"
           aria-hidden="true"
         >
@@ -73,7 +73,7 @@ import Content from "../components/Content.astro";
           title="Inclusive Open Source Software"
           subtitle="Accessible software empowering new learners"
         />
-        <p class="dark:text-slate-400 text-slate-500">
+        <Content>
           From fieldwork to laboratory work, field-based evolutionary studies
           have become increasingly complex. For museum scientists, collecting
           specimens with dozens of accompanying parts are common practices
@@ -81,7 +81,7 @@ import Content from "../components/Content.astro";
           have become the norm. I am working on developing open and accessible
           software to minimize the complexity, targeting the most neglected
           aspect of the workflow.
-        </p>
+        </Content>
       </div>
     </div>
   </main>
