--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import JournalArticle from "../components/Article.astro";
+import Published from "../components/pubs/Published.astro";
 import Publication from "../layouts/Publication.astro";
+import Forthcoming from "../components/pubs/Forthcoming.astro";
 ---
 
 <Layout title="Curriculum Vitae">
@@ -21,17 +22,17 @@ import Publication from "../layouts/Publication.astro";
           Publications
         </h1>
         <Publication year="Forthcoming">
-          <JournalArticle
+          <Forthcoming
             author="Nations, J.A., Kohli, B.A., Handika, H. , Achmadi, A.S., Polito, M.J., Rowe, K.C. and Esselstyn, J. A"
-            year="In review"
-            title="In situ diversification of Hill Rats (Bunomys) on Sulawesi"
-            journal="Journal of Mammalogy"
-            pageVol="In prep"
-            doi="https://doi.org/10.1111/zsc.12460"
+            year="Accepted"
+            title="The roles of isolation and interspecific interaction in generating the functional diversity of an insular mammal radiation"
+            journal="Oikos"
+            url="https://doi.org/10.1101/2022.07.15.500274"
+            pdf="https://www.biorxiv.org/content/10.1101/2022.07.15.500274v3.full.pdf"
           />
         </Publication>
         <Publication year="2024">
-          <JournalArticle
+          <Published
             author="Handika, H. and Esselstyn, J. A"
             year={2024}
             title="SEGUL: Ultrafast, memory-efficient and mobile-friendly software for manipulating and summarizing phylogenomic datasets"
@@ -39,7 +40,7 @@ import Publication from "../layouts/Publication.astro";
             pageVol="24(7)"
             doi="https://doi.org/10.1111/1755-0998.13964"
           />
-          <JournalArticle
+          <Published
             author="Nations, J. A., Handika, H., Mursyid, A., Butsa, R. D., Apandi, Achmadi, A. S. Esselstyn, J. A"
             year={2024}
             title="Three new species of shrew (Soricidae: Crocidura) from West Sumatra, Indonesia: elevational and morphological divergence in syntopic sister taxa"
@@ -49,15 +50,15 @@ import Publication from "../layouts/Publication.astro";
           />
         </Publication>
         <Publication year="2023">
-          <JournalArticle
-            author="Mursyid, A., Achmadi, A.S., Novarino, W., Handika, H., Nugroho, H.A., Anita, S., Adams, A.L., Rowe, K.M.C. and Rowe, K.C."
+          <Published
+            author="Mursyid, A., Achmadi, A.S., Novarino, W., Handika, H., Nugroho, H.A., Anita, S., Adams, A.L., Rowe, K.M.C. and Rowe, K.C"
             year={2023}
             title="Trypanosoma (Euglenozoa: Kinetoplastea) infections in rodents, bats, and shrews along an elevation and disturbance gradient in Central Sulawesi, Indonesia"
             journal="Contributions to Mammalogy and Zooarchaeology of Wallacea"
             pageVol="pp.663-671"
             doi="https://doi.org/10.1111/1755-0998.13964"
           />
-          <JournalArticle
+          <Published
             author="Achmadi, A. S., Fahri, F., Gazzard, A., Handika, H., Inayah, N., Kennerley, R. J., Lanusi, A. A., Nangoy, M., Nurdin, M. R., Rowe, K. C., Sheherazade"
             year={2023}
             title="Conservation status and priorities for Sulawesi's unique small mammal fauna"
@@ -65,8 +66,8 @@ import Publication from "../layouts/Publication.astro";
             pageVol="104 (3), 1-12"
             doi="https://doi.org/10.1093/jmammal/gyad126"
           />
-          <JournalArticle
-            author="Swanson, M.T., Henson, M.W., Handika, H., Achmadi, A.S., Anita, S., Rowe, K.C. and Esselstyn, J.A."
+          <Published
+            author="Swanson, M.T., Henson, M.W., Handika, H., Achmadi, A.S., Anita, S., Rowe, K.C. and Esselstyn, J.A"
             year={2023}
             title="Mycoplasmataceae dominate microbial community differences between gut regions in mammals with a simple gut architecture"
             journal="Journal of Mammalogy"
@@ -75,24 +76,24 @@ import Publication from "../layouts/Publication.astro";
           />
         </Publication>
         <Publication year="2021">
-          <JournalArticle
-            author="Esselstyn, J.A., Achmadi, A.S., Handika, H., Swanson, M. T., Giarla, T.C. and Rowe, K.C."
+          <Published
+            author="Esselstyn, J.A., Achmadi, A.S., Handika, H., Swanson, M. T., Giarla, T.C. and Rowe, K.C"
             year={2021}
             title="Fourteen new, endemic species of shrew (genus Crocidura) from Sulawesi reveal a spectacular island radiation"
             journal="Bulletin of the American Museum of Natural History"
             pageVol="454(1), pp.1-108"
             doi="https://doi.org/10.1206/0003-0090.454.1.1"
           />
-          <JournalArticle
-            author="Handika, H., Achmadi, A.S., Esselstyn, J.A., and Rowe, K.C."
+          <Published
+            author="Handika, H., Achmadi, A.S., Esselstyn, J.A., and Rowe, K.C"
             year={2021}
             title="Molecular and morphological systematics of the Bunomys division (Rodentia: Muridae), an endemic radiation on Sulawesi"
             journal="Zoologica Scripta"
             pageVol="50(2), pp. 141–154"
             doi="https://doi.org/10.1111/zsc.12460"
           />
-          <JournalArticle
-            author="Nations, J.A., Mursyid, A., Darma Busta, R., Adrian, S.P., Handika, H., Apandi, Achmadi, A.S. and Esselstyn, J.A."
+          <Published
+            author="Nations, J.A., Mursyid, A., Darma Busta, R., Adrian, S.P., Handika, H., Apandi, Achmadi, A.S. and Esselstyn, J.A"
             year={2021}
             title="The first report of albinism in a Sundaland endemic rodent"
             journal="Mammalia"
@@ -101,21 +102,71 @@ import Publication from "../layouts/Publication.astro";
           />
         </Publication>
         <Publication year="2020">
-          <JournalArticle
-            author="Harapan, T.S., Agung, A.P., Handika, H., Novarino, W., Tjong, D.H. and Tomlinson, K.W."
+          <Published
+            author="Harapan, T.S., Agung, A.P., Handika, H., Novarino, W., Tjong, D.H. and Tomlinson, K.W"
             year={2020}
             title="ew records and potential geographic distribution of Elongated Caecilian, Ichthyophis elongatus Taylor, 1965 (Amphibia, Gymnophiona, Ichthyophiidae), endemic to West Sumatra, Indonesia"
             journal="Check List, "
             pageVol="16(6), pp. 1695-1701"
             doi="https://doi.org/10.15560/16.6.1695"
           />
-          <JournalArticle
-            author="Winterhoff, M.L., Achmadi, A.S., Roycroft, E.J., Handika, H., Putra, R.T.J., Rowe, K.M.C., Perkins, S. and Rowe, K.C."
+          <Published
+            author="Winterhoff, M.L., Achmadi, A.S., Roycroft, E.J., Handika, H., Putra, R.T.J., Rowe, K.M.C., Perkins, S. and Rowe, K.C"
             year={2020}
             title="Native and introduced trypanosome parasites in endemic and introduced murine rodents of Sulawesi"
             journal="Journal of Parasitology"
             pageVol="106(5), pp.523-536"
             doi="https://doi.org/10.1645/19-136"
+          />
+        </Publication>
+        <Publication year="2019 and earlier">
+          <Published
+            author="Esselstyn, J.A., Achmadi, A.S., Handika, H., Giarla, T.C. and Rowe, K.C"
+            year={2019}
+            title="A new climbing shrew from Sulawesi highlights the tangled taxonomy of an endemic radiation"
+            journal="Journal of Mammalogy"
+            pageVol="100(6), pp.1713-1725"
+            doi="https://doi.org/10.1093/jmammal/gyz077"
+          />
+          <Published
+            author="Janra, M.N., Noske, R.A., Chornelia, A., Handika, H., Mursyid, A., Agung, A. and Saputra, A"
+            year={2018}
+            title="A second breeding record of Chestnut-naped Forktails Enicurus ruficapillus in Sumatra, and observations suggesting females alone incubate"
+            journal="Kukila"
+            pageVol="21, pp.13-16"
+            doi=""
+          />
+          <Published
+            author="Demos, T.C., Achmadi, A.S., Handika, H., Rowe, K.C. and Esselstyn, J.A"
+            year={2017}
+            title="A new species of shrew (Soricomorpha: Crocidura) from Java, Indonesia: possible character displacement despite interspecific gene flow"
+            journal="Journal of Mammalogy"
+            pageVol="98(1), pp.183-193"
+            doi="https://doi.org/10.1093/jmammal/gyw183"
+          />
+          <Published
+            author="Demos, T.C., Achmadi, A.S., Giarla, T.C., Handika, H., Rowe, K.C. and Esselstyn, J.A"
+            year={2016}
+            title="Local endemism and within‐island diversification of shrews illustrate the importance of speciation in building Sundaland mammal diversity"
+            journal="Molecular ecology"
+            pageVol="25(20), pp.5158-5173"
+            doi="https://doi.org/10.1111/mec.13820"
+          />
+          <Published
+            author="Esselstyn, J.A., Achmadi, A.S., Handika, H. and Rowe, K.C"
+            year={2015}
+            title="A hog-nosed shrew rat (Rodentia: Muridae) from Sulawesi Island, Indonesia"
+            journal="Journal of Mammalogy"
+            pageVol="96(5), pp.895-907"
+            doi="https://doi.org/10.1093/jmammal/gyv093"
+          />
+          <Published
+            author="Handika, H., Nurdin, J. and Rizaldi"
+            year={2013}
+            title="Small Terrestrial Mammals Community on Mount Singgalang, West Sumatra"
+            journal="Jurnal Biologi Universitas Andalas"
+            pageVol="2(2), pp.103-109"
+            doi="https://doi.org/10.25077/jbioua.2.2.%25p.2013"
           />
         </Publication>
       </div>
