--- a/src/pages/fieldwork.astro
+++ b/src/pages/fieldwork.astro
@@ -14,8 +14,8 @@ import TimelineItem from "../layouts/TimelineItem.astro";
           Fieldwork
         </h1>
         <p class="dark:text-slate-400 text-slate-500">
-          Over 30 field expeditions across four countries spanning more than 12
-          years
+          Discover my journey through over 30 field expeditions across five
+          countries, spanning more than 12 years.
         </p>
       </div>
       <Timeline>
@@ -66,9 +66,144 @@ import TimelineItem from "../layouts/TimelineItem.astro";
           subtitle="Central Sulawesi, Indonesia 🇮🇩"
         />
         <TimelineItem
-          date="June 2017"
+          date="March-April 2018"
           title="Mt. Talamau"
           subtitle="West Sumatra, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="November-December 2017"
+          title="Mt. Torompupu"
+          subtitle="Central Sulawesi, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="October 2017"
+          title="Solok Selatan"
+          subtitle="West Sumatra, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="August-September 2017"
+          title="Mt. Katopasa, Central Sulawesi, Indonesia"
+          subtitle="Central Sulawesi, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="June 2017"
+          title="Wilson Promontory National Park"
+          subtitle="Victoria, Australia 🇦🇺"
+        />
+        <TimelineItem
+          date="November 2016"
+          title="Grampians National Park"
+          subtitle="Victoria, Australia 🇦🇺"
+        />
+        <TimelineItem
+          date="October-November 2016"
+          title="Mt. Bawakaraeng"
+          subtitle="South Sulawesi, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="July-August 2016"
+          title="Mt. Latimojong"
+          subtitle="South Sulawesi, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="June 2016"
+          title="Mt. Ambang"
+          subtitle="North Sulawesi, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="November 2015"
+          title="Grampians National Park"
+          subtitle="Victoria, Australia 🇦🇺"
+        />
+        <TimelineItem
+          date="June 2015"
+          title="Mt. Talamau"
+          subtitle="West Sumatra, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="December 2014"
+          title="Runtu"
+          subtitle="Central Kalimantan, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="September-October 2014"
+          title="Mts. Tujuh and Masurai"
+          subtitle="Jambi, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="June-July 2014"
+          title="San Rafael and Mt. Huraw"
+          subtitle="Samar Island, The Philippines 🇵🇭"
+        />
+        <TimelineItem
+          date="March 2014"
+          title="Cirebon"
+          subtitle="West Java, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="December 2013"
+          title="Mt. Maras"
+          subtitle="Banka Island, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="September-October 2013"
+          title="Mts. Salak, Slamet, and Ijen"
+          subtitle="Java, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="June 2013"
+          title="Kota Waringin Barat"
+          subtitle="Central Kalimantan, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="March 2013"
+          title="Mt. Dako"
+          subtitle="Central Sulawesi, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="January 2013"
+          title="Mts. Kerinci and Tujuh"
+          subtitle="Jambi, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="January 2013"
+          title="Mt. Tajam"
+          subtitle="Belitung Island, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="December 2012"
+          title="June-July 2012"
+          subtitle="West Sumatra, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="May-June 2012"
+          title="Mt. Gandang Dewata"
+          subtitle="West Sulawesi, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="April 2012"
+          title="Mt. Malintang"
+          subtitle="West Sumatra, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="October 2010"
+          title="Siberut National Park, Mentawai Islands"
+          subtitle="West Sumatra, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="September 2010"
+          title="Mt. Sago"
+          subtitle="West Sumatra, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="June 2010"
+          title="Angkola"
+          subtitle="North Sumatra, Indonesia 🇮🇩"
+        />
+        <TimelineItem
+          date="June 2009"
+          title="Mt. Merapi"
+          subtitle=" West Sumatra, Indonesia 🇮🇩"
         />
       </Timeline>
     </div>
