--- a/src/layouts/Timeline.astro
+++ b/src/layouts/Timeline.astro
@@ -3,7 +3,7 @@
 ---
 
 <div
-  class="space-y-8 mt-16 relative before:absolute before:inset-0 before:ml-5 before:-translate-x-px md:before:ml-[8.75rem] md:before:translate-x-0 before:h-full before:w-0.5 before:bg-gradient-to-b before:from-transparent before:via-porsche-500 before:to-transparent"
+  class="space-y-2 mt-16 relative before:absolute before:inset-0 before:ml-5 before:-translate-x-px md:before:ml-[8.75rem] md:before:translate-x-0 before:h-full before:w-0.5 before:bg-gradient-to-b before:from-transparent before:from-1% before:via-porsche-600 dark:before:via-porsche-300 before:to-transparent"
 >
   <slot />
 </div>
