--- a/src/layouts/Timeline.astro
+++ b/src/layouts/Timeline.astro
@@ -1,9 +1,27 @@
 ---
+import cntl from "cntl";
 
+const lineCN = cntl`
+  space-y-2
+  mt-16
+  relative
+  before:absolute
+  before:inset-0
+  before:ml-5
+  before:-translate-x-px
+  md:before:ml-[8.75rem]
+  md:before:translate-x-0
+  before:h-full
+  before:w-0.5
+  before:bg-gradient-to-b
+  before:from-transparent
+  before:from-1%
+  before:via-porsche-600
+  dark:before:via-porsche-300
+  before:to-transparent
+`;
 ---
 
-<div
-  class="space-y-2 mt-16 relative before:absolute before:inset-0 before:ml-5 before:-translate-x-px md:before:ml-[8.75rem] md:before:translate-x-0 before:h-full before:w-0.5 before:bg-gradient-to-b before:from-transparent before:from-1% before:via-porsche-600 dark:before:via-porsche-300 before:to-transparent"
->
+<div class={lineCN}>
   <slot />
 </div>
