--- a/src/layouts/Timeline.astro
+++ b/src/layouts/Timeline.astro
@@ -1,7 +1,7 @@
 ---
 import cntl from "cntl";
 
-const lineCN = cntl`
+const lineClasses = cntl`
   space-y-2
   mt-16
   relative
@@ -22,6 +22,6 @@ const lineCN = cntl`
 `;
 ---
 
-<div class={lineCN}>
+<div class={lineClasses}>
   <slot />
 </div>
