--- a/src/pages/fieldwork.astro
+++ b/src/pages/fieldwork.astro
@@ -14,8 +14,8 @@ import TimelineItem from "../layouts/TimelineItem.astro";
           Fieldwork
         </h1>
         <p class="dark:text-slate-400 text-slate-500">
-          Discover my journey through over 30 field expeditions across five
-          countries, spanning more than 12 years.
+          My journey through over 30 field expeditions across five countries,
+          spanning more than 12 years.
         </p>
       </div>
       <Timeline>
