--- a/src/layouts/Timeline.astro
+++ b/src/layouts/Timeline.astro
@@ -17,6 +17,7 @@ const lineClasses = cntl`
   before:from-transparent
   before:from-1%
   before:via-porsche-600
+  before:via-80%
   dark:before:via-porsche-300
   before:to-transparent
 `;
