--- a/src/pages/software.astro
+++ b/src/pages/software.astro
@@ -1,21 +1,19 @@
 ---
+import PageTitle from "../components/PageTitle.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Software">
   <main>
     <div class="mx-auto max-w-2xl py-6 sm:py-16 lg:py-8">
-      <div class="text-center">
-        <h1
-          class="text-balance text-2xl font-semibold tracking-tight text-gray-900 dark:text-white sm:text-7xl"
-        >
-          Software
-        </h1>
+      <PageTitle title="Software">
         <p class="dark:text-slate-400 text-slate-500">
-          This is a placeholder page for software content. More information will
-          be added soon.
+          I am passionate about developing software tools that help researchers
+          analyze and visualize their data. I have developed several software
+          packages for phylogenomic analysis, data manipulation, and
+          visualization. Below are some of the software tools I have developed.
         </p>
-      </div>
+      </PageTitle>
     </div>
   </main>
 </Layout>
