--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -4,183 +4,171 @@ import Published from "../components/pubs/Published.astro";
 import Publication from "../layouts/Publication.astro";
 import Forthcoming from "../components/pubs/Forthcoming.astro";
 import rodentSvg from "../assets/icons/mammals.svg";
+import PageTitle from "../components/PageTitle.astro";
 ---
 
 <Layout title="Curriculum Vitae">
   <main>
-    <div
-      class="absolute inset-x-0 -top-20 -z-10 transform-gpu overflow-hidden blur-2xl opacity-80 mt-24"
-      aria-hidden="true"
-    >
-      <img
-        src={rodentSvg.src}
-        alt="Rodent illustration"
-        class="block mx-auto sm:w-2/3"
-      />
-    </div>
-    <div class="mx-auto max-w-4xl py-6 sm:py-16 lg:py-8">
-      <div class="text-center">
-        <h1
-          class="font-serif
-            tracking-wide
-            dark:text-white
-            text-gray-900
-            text-5xl
-            font-semibold
-            tracking-tight
-            py-4"
-        >
-          Publications
-        </h1>
-        <Publication year="Forthcoming">
-          <Forthcoming
-            author="Nations, J.A., Kohli, B.A., Handika, H. , Achmadi, A.S., Polito, M.J., Rowe, K.C. and Esselstyn, J. A"
-            year="Accepted"
-            title="The roles of isolation and interspecific interaction in generating the functional diversity of an insular mammal radiation"
-            journal="Oikos"
-            url="https://doi.org/10.1101/2022.07.15.500274"
-            pdf="https://www.biorxiv.org/content/10.1101/2022.07.15.500274v3.full.pdf"
-          />
-        </Publication>
-        <Publication year="2024">
-          <Published
-            author="Handika, H. and Esselstyn, J. A"
-            year={2024}
-            title="SEGUL: Ultrafast, memory-efficient and mobile-friendly software for manipulating and summarizing phylogenomic datasets"
-            journal="Molecular Ecology Resources"
-            pageVol="24(7)"
-            doi="https://doi.org/10.1111/1755-0998.13964"
-          />
-          <Published
-            author="Nations, J. A., Handika, H., Mursyid, A., Butsa, R. D., Apandi, Achmadi, A. S. Esselstyn, J. A"
-            year={2024}
-            title="Three new species of shrew (Soricidae: Crocidura) from West Sumatra, Indonesia: elevational and morphological divergence in syntopic sister taxa"
-            journal="Journal of Mammalogy"
-            pageVol="105 (2), 372-389"
-            doi="https://doi.org/10.1093/jmammal/gyad126"
-          />
-        </Publication>
-        <Publication year="2023">
-          <Published
-            author="Mursyid, A., Achmadi, A.S., Novarino, W., Handika, H., Nugroho, H.A., Anita, S., Adams, A.L., Rowe, K.M.C. and Rowe, K.C"
-            year={2023}
-            title="Trypanosoma (Euglenozoa: Kinetoplastea) infections in rodents, bats, and shrews along an elevation and disturbance gradient in Central Sulawesi, Indonesia"
-            journal="Contributions to Mammalogy and Zooarchaeology of Wallacea"
-            pageVol="pp.663-671"
-            doi="https://doi.org/10.1111/1755-0998.13964"
-          />
-          <Published
-            author="Achmadi, A. S., Fahri, F., Gazzard, A., Handika, H., Inayah, N., Kennerley, R. J., Lanusi, A. A., Nangoy, M., Nurdin, M. R., Rowe, K. C., Sheherazade"
-            year={2023}
-            title="Conservation status and priorities for Sulawesi's unique small mammal fauna"
-            journal="Journal of Mammalogy"
-            pageVol="104 (3), 1-12"
-            doi="https://doi.org/10.1093/jmammal/gyad126"
-          />
-          <Published
-            author="Swanson, M.T., Henson, M.W., Handika, H., Achmadi, A.S., Anita, S., Rowe, K.C. and Esselstyn, J.A"
-            year={2023}
-            title="Mycoplasmataceae dominate microbial community differences between gut regions in mammals with a simple gut architecture"
-            journal="Journal of Mammalogy"
-            pageVol="104(1), pp.146-158"
-            doi="https://doi.org/10.1093/jmammal/gyac098"
-          />
-        </Publication>
-        <Publication year="2021">
-          <Published
-            author="Esselstyn, J.A., Achmadi, A.S., Handika, H., Swanson, M. T., Giarla, T.C. and Rowe, K.C"
-            year={2021}
-            title="Fourteen new, endemic species of shrew (genus Crocidura) from Sulawesi reveal a spectacular island radiation"
-            journal="Bulletin of the American Museum of Natural History"
-            pageVol="454(1), pp.1-108"
-            doi="https://doi.org/10.1206/0003-0090.454.1.1"
-          />
-          <Published
-            author="Handika, H., Achmadi, A.S., Esselstyn, J.A., and Rowe, K.C"
-            year={2021}
-            title="Molecular and morphological systematics of the Bunomys division (Rodentia: Muridae), an endemic radiation on Sulawesi"
-            journal="Zoologica Scripta"
-            pageVol="50(2), pp. 141–154"
-            doi="https://doi.org/10.1111/zsc.12460"
-          />
-          <Published
-            author="Nations, J.A., Mursyid, A., Darma Busta, R., Adrian, S.P., Handika, H., Apandi, Achmadi, A.S. and Esselstyn, J.A"
-            year={2021}
-            title="The first report of albinism in a Sundaland endemic rodent"
-            journal="Mammalia"
-            pageVol="85(2), pp.168-172"
-            doi="https://doi.org/10.1515/mammalia-2020-0047"
-          />
-        </Publication>
-        <Publication year="2020">
-          <Published
-            author="Harapan, T.S., Agung, A.P., Handika, H., Novarino, W., Tjong, D.H. and Tomlinson, K.W"
-            year={2020}
-            title="ew records and potential geographic distribution of Elongated Caecilian, Ichthyophis elongatus Taylor, 1965 (Amphibia, Gymnophiona, Ichthyophiidae), endemic to West Sumatra, Indonesia"
-            journal="Check List, "
-            pageVol="16(6), pp. 1695-1701"
-            doi="https://doi.org/10.15560/16.6.1695"
-          />
-          <Published
-            author="Winterhoff, M.L., Achmadi, A.S., Roycroft, E.J., Handika, H., Putra, R.T.J., Rowe, K.M.C., Perkins, S. and Rowe, K.C"
-            year={2020}
-            title="Native and introduced trypanosome parasites in endemic and introduced murine rodents of Sulawesi"
-            journal="Journal of Parasitology"
-            pageVol="106(5), pp.523-536"
-            doi="https://doi.org/10.1645/19-136"
-          />
-        </Publication>
-        <Publication year="2019 and earlier">
-          <Published
-            author="Esselstyn, J.A., Achmadi, A.S., Handika, H., Giarla, T.C. and Rowe, K.C"
-            year={2019}
-            title="A new climbing shrew from Sulawesi highlights the tangled taxonomy of an endemic radiation"
-            journal="Journal of Mammalogy"
-            pageVol="100(6), pp.1713-1725"
-            doi="https://doi.org/10.1093/jmammal/gyz077"
-          />
-          <Published
-            author="Janra, M.N., Noske, R.A., Chornelia, A., Handika, H., Mursyid, A., Agung, A. and Saputra, A"
-            year={2018}
-            title="A second breeding record of Chestnut-naped Forktails Enicurus ruficapillus in Sumatra, and observations suggesting females alone incubate"
-            journal="Kukila"
-            pageVol="21, pp.13-16"
-            doi=""
-          />
-          <Published
-            author="Demos, T.C., Achmadi, A.S., Handika, H., Rowe, K.C. and Esselstyn, J.A"
-            year={2017}
-            title="A new species of shrew (Soricomorpha: Crocidura) from Java, Indonesia: possible character displacement despite interspecific gene flow"
-            journal="Journal of Mammalogy"
-            pageVol="98(1), pp.183-193"
-            doi="https://doi.org/10.1093/jmammal/gyw183"
-          />
-          <Published
-            author="Demos, T.C., Achmadi, A.S., Giarla, T.C., Handika, H., Rowe, K.C. and Esselstyn, J.A"
-            year={2016}
-            title="Local endemism and within‐island diversification of shrews illustrate the importance of speciation in building Sundaland mammal diversity"
-            journal="Molecular ecology"
-            pageVol="25(20), pp.5158-5173"
-            doi="https://doi.org/10.1111/mec.13820"
-          />
-          <Published
-            author="Esselstyn, J.A., Achmadi, A.S., Handika, H. and Rowe, K.C"
-            year={2015}
-            title="A hog-nosed shrew rat (Rodentia: Muridae) from Sulawesi Island, Indonesia"
-            journal="Journal of Mammalogy"
-            pageVol="96(5), pp.895-907"
-            doi="https://doi.org/10.1093/jmammal/gyv093"
-          />
-          <Published
-            author="Handika, H., Nurdin, J. and Rizaldi"
-            year={2013}
-            title="Small Terrestrial Mammals Community on Mount Singgalang, West Sumatra"
-            journal="Jurnal Biologi Universitas Andalas"
-            pageVol="2(2), pp.103-109"
-            doi="https://doi.org/10.25077/jbioua.2.2.%25p.2013"
-          />
-        </Publication>
+    <div class="mx-auto max-w-5xl py-6 sm:py-16 lg:py-8">
+      <div
+        class="absolute inset-x-0 -top-20 -z-10 transform-gpu overflow-hidden blur-2xl opacity-80 mt-24"
+        aria-hidden="true"
+      >
+        <img
+          src={rodentSvg.src}
+          alt="Rodent illustration"
+          class="block mx-auto sm:w-2/3"
+        />
       </div>
+      <PageTitle title="Publications" />
+      <Publication year="Forthcoming">
+        <Forthcoming
+          author="Nations, J.A., Kohli, B.A., Handika, H. , Achmadi, A.S., Polito, M.J., Rowe, K.C. and Esselstyn, J. A"
+          year="Accepted"
+          title="The roles of isolation and interspecific interaction in generating the functional diversity of an insular mammal radiation"
+          journal="Oikos"
+          url="https://doi.org/10.1101/2022.07.15.500274"
+          pdf="https://www.biorxiv.org/content/10.1101/2022.07.15.500274v3.full.pdf"
+        />
+      </Publication>
+      <Publication year="2024">
+        <Published
+          author="Handika, H. and Esselstyn, J. A"
+          year={2024}
+          title="SEGUL: Ultrafast, memory-efficient and mobile-friendly software for manipulating and summarizing phylogenomic datasets"
+          journal="Molecular Ecology Resources"
+          pageVol="24(7)"
+          doi="https://doi.org/10.1111/1755-0998.13964"
+        />
+        <Published
+          author="Nations, J. A., Handika, H., Mursyid, A., Butsa, R. D., Apandi, Achmadi, A. S. Esselstyn, J. A"
+          year={2024}
+          title="Three new species of shrew (Soricidae: Crocidura) from West Sumatra, Indonesia: elevational and morphological divergence in syntopic sister taxa"
+          journal="Journal of Mammalogy"
+          pageVol="105 (2), 372-389"
+          doi="https://doi.org/10.1093/jmammal/gyad126"
+        />
+      </Publication>
+      <Publication year="2023">
+        <Published
+          author="Mursyid, A., Achmadi, A.S., Novarino, W., Handika, H., Nugroho, H.A., Anita, S., Adams, A.L., Rowe, K.M.C. and Rowe, K.C"
+          year={2023}
+          title="Trypanosoma (Euglenozoa: Kinetoplastea) infections in rodents, bats, and shrews along an elevation and disturbance gradient in Central Sulawesi, Indonesia"
+          journal="Contributions to Mammalogy and Zooarchaeology of Wallacea"
+          pageVol="pp.663-671"
+          doi="https://doi.org/10.1111/1755-0998.13964"
+        />
+        <Published
+          author="Achmadi, A. S., Fahri, F., Gazzard, A., Handika, H., Inayah, N., Kennerley, R. J., Lanusi, A. A., Nangoy, M., Nurdin, M. R., Rowe, K. C., Sheherazade"
+          year={2023}
+          title="Conservation status and priorities for Sulawesi's unique small mammal fauna"
+          journal="Journal of Mammalogy"
+          pageVol="104 (3), 1-12"
+          doi="https://doi.org/10.1093/jmammal/gyad126"
+        />
+        <Published
+          author="Swanson, M.T., Henson, M.W., Handika, H., Achmadi, A.S., Anita, S., Rowe, K.C. and Esselstyn, J.A"
+          year={2023}
+          title="Mycoplasmataceae dominate microbial community differences between gut regions in mammals with a simple gut architecture"
+          journal="Journal of Mammalogy"
+          pageVol="104(1), pp.146-158"
+          doi="https://doi.org/10.1093/jmammal/gyac098"
+        />
+      </Publication>
+      <Publication year="2021">
+        <Published
+          author="Esselstyn, J.A., Achmadi, A.S., Handika, H., Swanson, M. T., Giarla, T.C. and Rowe, K.C"
+          year={2021}
+          title="Fourteen new, endemic species of shrew (genus Crocidura) from Sulawesi reveal a spectacular island radiation"
+          journal="Bulletin of the American Museum of Natural History"
+          pageVol="454(1), pp.1-108"
+          doi="https://doi.org/10.1206/0003-0090.454.1.1"
+        />
+        <Published
+          author="Handika, H., Achmadi, A.S., Esselstyn, J.A., and Rowe, K.C"
+          year={2021}
+          title="Molecular and morphological systematics of the Bunomys division (Rodentia: Muridae), an endemic radiation on Sulawesi"
+          journal="Zoologica Scripta"
+          pageVol="50(2), pp. 141–154"
+          doi="https://doi.org/10.1111/zsc.12460"
+        />
+        <Published
+          author="Nations, J.A., Mursyid, A., Darma Busta, R., Adrian, S.P., Handika, H., Apandi, Achmadi, A.S. and Esselstyn, J.A"
+          year={2021}
+          title="The first report of albinism in a Sundaland endemic rodent"
+          journal="Mammalia"
+          pageVol="85(2), pp.168-172"
+          doi="https://doi.org/10.1515/mammalia-2020-0047"
+        />
+      </Publication>
+      <Publication year="2020">
+        <Published
+          author="Harapan, T.S., Agung, A.P., Handika, H., Novarino, W., Tjong, D.H. and Tomlinson, K.W"
+          year={2020}
+          title="ew records and potential geographic distribution of Elongated Caecilian, Ichthyophis elongatus Taylor, 1965 (Amphibia, Gymnophiona, Ichthyophiidae), endemic to West Sumatra, Indonesia"
+          journal="Check List, "
+          pageVol="16(6), pp. 1695-1701"
+          doi="https://doi.org/10.15560/16.6.1695"
+        />
+        <Published
+          author="Winterhoff, M.L., Achmadi, A.S., Roycroft, E.J., Handika, H., Putra, R.T.J., Rowe, K.M.C., Perkins, S. and Rowe, K.C"
+          year={2020}
+          title="Native and introduced trypanosome parasites in endemic and introduced murine rodents of Sulawesi"
+          journal="Journal of Parasitology"
+          pageVol="106(5), pp.523-536"
+          doi="https://doi.org/10.1645/19-136"
+        />
+      </Publication>
+      <Publication year="2019 and earlier">
+        <Published
+          author="Esselstyn, J.A., Achmadi, A.S., Handika, H., Giarla, T.C. and Rowe, K.C"
+          year={2019}
+          title="A new climbing shrew from Sulawesi highlights the tangled taxonomy of an endemic radiation"
+          journal="Journal of Mammalogy"
+          pageVol="100(6), pp.1713-1725"
+          doi="https://doi.org/10.1093/jmammal/gyz077"
+        />
+        <Published
+          author="Janra, M.N., Noske, R.A., Chornelia, A., Handika, H., Mursyid, A., Agung, A. and Saputra, A"
+          year={2018}
+          title="A second breeding record of Chestnut-naped Forktails Enicurus ruficapillus in Sumatra, and observations suggesting females alone incubate"
+          journal="Kukila"
+          pageVol="21, pp.13-16"
+          doi=""
+        />
+        <Published
+          author="Demos, T.C., Achmadi, A.S., Handika, H., Rowe, K.C. and Esselstyn, J.A"
+          year={2017}
+          title="A new species of shrew (Soricomorpha: Crocidura) from Java, Indonesia: possible character displacement despite interspecific gene flow"
+          journal="Journal of Mammalogy"
+          pageVol="98(1), pp.183-193"
+          doi="https://doi.org/10.1093/jmammal/gyw183"
+        />
+        <Published
+          author="Demos, T.C., Achmadi, A.S., Giarla, T.C., Handika, H., Rowe, K.C. and Esselstyn, J.A"
+          year={2016}
+          title="Local endemism and within‐island diversification of shrews illustrate the importance of speciation in building Sundaland mammal diversity"
+          journal="Molecular ecology"
+          pageVol="25(20), pp.5158-5173"
+          doi="https://doi.org/10.1111/mec.13820"
+        />
+        <Published
+          author="Esselstyn, J.A., Achmadi, A.S., Handika, H. and Rowe, K.C"
+          year={2015}
+          title="A hog-nosed shrew rat (Rodentia: Muridae) from Sulawesi Island, Indonesia"
+          journal="Journal of Mammalogy"
+          pageVol="96(5), pp.895-907"
+          doi="https://doi.org/10.1093/jmammal/gyv093"
+        />
+        <Published
+          author="Handika, H., Nurdin, J. and Rizaldi"
+          year={2013}
+          title="Small Terrestrial Mammals Community on Mount Singgalang, West Sumatra"
+          journal="Jurnal Biologi Universitas Andalas"
+          pageVol="2(2), pp.103-109"
+          doi="https://doi.org/10.25077/jbioua.2.2.%25p.2013"
+        />
+      </Publication>
     </div>
-  </main></Layout
->
+  </main>
+</Layout>
