--- a/src/pages/fieldwork.astro
+++ b/src/pages/fieldwork.astro
@@ -1,4 +1,5 @@
 ---
+import PageTitle from "../components/PageTitle.astro";
 import Layout from "../layouts/Layout.astro";
 import Timeline from "../layouts/Timeline.astro";
 import TimelineItem from "../layouts/TimelineItem.astro";
@@ -7,17 +8,12 @@ import TimelineItem from "../layouts/TimelineItem.astro";
 <Layout title="Fieldwork">
   <main>
     <div class="mx-auto max-w-5xl py-6 sm:py-16 lg:py-8">
-      <div class="text-center">
-        <h1
-          class="text-balance text-2xl font-semibold tracking-tight text-gray-900 dark:text-white sm:text-7xl"
-        >
-          Fieldwork
-        </h1>
+      <PageTitle title="Fieldwork">
         <p class="dark:text-slate-400 text-slate-500">
           My journey through over 30 field expeditions across five countries,
           spanning more than 12 years.
         </p>
-      </div>
+      </PageTitle>
       <Timeline>
         <TimelineItem
           date="August-December 2023"
@@ -207,5 +203,5 @@ import TimelineItem from "../layouts/TimelineItem.astro";
         />
       </Timeline>
     </div>
-  </main></Layout
->
+  </main>
+</Layout>
