--- a/src/pages/outreach.astro
+++ b/src/pages/outreach.astro
@@ -1,21 +1,19 @@
 ---
+import PageTitle from "../components/PageTitle.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Outreach">
   <main>
     <div class="mx-auto max-w-2xl py-6 sm:py-16 lg:py-8">
-      <div class="text-center">
-        <h1
-          class="text-balance text-2xl font-semibold tracking-tight text-gray-900 dark:text-white sm:text-7xl"
-        >
-          Outreach
-        </h1>
+      <PageTitle title="Outreach">
         <p class="dark:text-slate-400 text-slate-500">
-          This is a placeholder page for outreach content. More information will
-          be added soon.
+          I am passionate about sharing my research and experiences with the
+          public. I have been involved in various outreach activities, from
+          school visits to public talks. I am also active in science
+          communication through social media and blogging.
         </p>
-      </div>
+      </PageTitle>
     </div>
   </main>
 </Layout>
