--- a/src/pages/teaching.astro
+++ b/src/pages/teaching.astro
@@ -1,21 +1,19 @@
 ---
+import PageTitle from "../components/PageTitle.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Teaching">
   <main>
     <div class="mx-auto max-w-2xl py-6 sm:py-16 lg:py-8">
-      <div class="text-center">
-        <h1
-          class="text-balance text-2xl font-semibold tracking-tight text-gray-900 dark:text-white sm:text-7xl"
-        >
-          Teaching
-        </h1>
+      <PageTitle title="Teaching">
         <p class="dark:text-slate-400 text-slate-500">
-          This is a placeholder page for Teaching content. More information will
-          be added soon.
+          I am passionate about teaching and mentoring students. I have taught
+          various courses in biology, ecology, and evolution. I have also
+          mentored students in research projects and fieldwork. I am committed
+          to fostering an inclusive and diverse learning environment.
         </p>
-      </div>
+      </PageTitle>
     </div>
   </main>
 </Layout>
