--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -5,21 +5,13 @@ import Publication from "../layouts/Publication.astro";
 import Forthcoming from "../components/pubs/Forthcoming.astro";
 import rodentSvg from "../assets/icons/mammals.svg";
 import PageTitle from "../components/PageTitle.astro";
+import Background from "../components/Background.astro";
 ---
 
 <Layout title="Curriculum Vitae">
   <main>
     <div class="mx-auto max-w-5xl py-6 sm:py-16 lg:py-8">
-      <div
-        class="absolute inset-x-0 -top-20 -z-10 transform-gpu overflow-hidden blur-2xl opacity-80 mt-24"
-        aria-hidden="true"
-      >
-        <img
-          src={rodentSvg.src}
-          alt="Rodent illustration"
-          class="block mx-auto sm:w-2/3"
-        />
-      </div>
+      <Background backgroundImage={rodentSvg} />
       <PageTitle title="Publications" />
       <Publication year="Forthcoming">
         <Forthcoming
