--- a/src/components/Background.astro
+++ b/src/components/Background.astro
@@ -1,11 +1,22 @@
 ---
+import cntl from "cntl";
+
 const { backgroundImage } = Astro.props;
+
+const backgroundClasses = cntl`
+    absolute
+    inset-x-0
+    -top-20
+    -z-10
+    transform-gpu
+    overflow-hidden
+    blur-2xl
+    opacity-80
+    mt-24
+`;
 ---
 
-<div
-  class="absolute inset-x-0 -top-20 -z-10 transform-gpu overflow-hidden blur-2xl opacity-80 mt-24"
-  aria-hidden="true"
->
+<div class={backgroundClasses} aria-hidden="true">
   <img
     src={backgroundImage.src}
     alt="Rodent illustration"
