--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,6 +26,23 @@ const heroTextClasses = cntl`
   dark:text-slate-300
   sm:text-xl/8
 `;
+
+const statsGridClasses = cntl`
+  grid
+  bg-gradient-to-r
+  from-porsche-400
+  to-chetwode-200
+  dark:from-porsche-700
+  dark:to-chetwode-600
+  lg:grid-cols-3
+  gap-4
+  text-center
+  rounded-2xl
+  lg:rounded-full
+  mt-8
+  mx-8
+  lg:mx-40
+`;
 ---
 
 <Layout title="Island small mammals and inclusive biodiversity software">
@@ -70,9 +87,7 @@ const heroTextClasses = cntl`
         >
       </div>
     </div>
-    <div
-      class="grid bg-gradient-to-r from-porsche-400 to-chetwode-200 dark:from-porsche-700 dark:to-chetwode-600 lg:grid-cols-3 gap-4 text-center rounded-2xl lg:rounded-full mt-8 mx-8 lg:mx-40"
-    >
+    <div class={statsGridClasses}>
       <Stats title="Fieldwork" value="30" unit="localities" url="/fieldwork" />
       <Stats
         title="Specimen contribution"
