Update background styles.

--- a/src/components/Background.astro
+++ b/src/components/Background.astro
@@ -10,8 +10,8 @@ const backgroundClasses = cntl`
     -z-10
     transform-gpu
     overflow-hidden
-    blur-2xl
-    opacity-80
+    blur-xl
+    opacity-40
     mt-24
 `;
 ---
