--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,11 +3,14 @@ import Layout from "../layouts/Layout.astro";
 import SectionHead from "../components/Section.astro";
 import Content from "../components/Content.astro";
 import PageTitle from "../components/PageTitle.astro";
+import researchIcon from "../assets/icons/research.svg";
+import Background from "../components/Background.astro";
 ---
 
 <Layout title="Research Projects">
   <main>
     <div class="mx-auto max-w-5xl py-6 sm:py-16 lg:py-8">
+      <Background backgroundImage={researchIcon} />
       <PageTitle title="Research Projects">
         <h2 class="font-bold text-slate-400">Key Projects</h2>
         <p class="text-slate-400">
