Add background for all pages.

--- a/src/components/Background.astro
+++ b/src/components/Background.astro
@@ -10,9 +10,9 @@ const backgroundClasses = cntl`
     -z-10
     transform-gpu
     overflow-hidden
-    blur-xl
-    opacity-40
-    mt-24
+    blur-lg
+    opacity-30
+    mt-16
 `;
 ---
 
