--- a/src/pages/outreach.astro
+++ b/src/pages/outreach.astro
@@ -1,11 +1,14 @@
 ---
 import PageTitle from "../components/PageTitle.astro";
 import Layout from "../layouts/Layout.astro";
+import outreachIcon from "../assets/icons/outreach.svg";
+import Background from "../components/Background.astro";
 ---
 
 <Layout title="Outreach">
   <main>
     <div class="mx-auto max-w-2xl py-6 sm:py-16 lg:py-8">
+      <Background backgroundImage={outreachIcon} />
       <PageTitle title="Outreach">
         <p class="dark:text-slate-400 text-slate-500">
           I am passionate about sharing my research and experiences with the
