--- a/src/pages/teaching.astro
+++ b/src/pages/teaching.astro
@@ -1,11 +1,14 @@
 ---
 import PageTitle from "../components/PageTitle.astro";
 import Layout from "../layouts/Layout.astro";
+import teachingIcon from "../assets/icons/teaching.svg";
+import Background from "../components/Background.astro";
 ---
 
 <Layout title="Teaching">
   <main>
     <div class="mx-auto max-w-2xl py-6 sm:py-16 lg:py-8">
+      <Background backgroundImage={teachingIcon} />
       <PageTitle title="Teaching">
         <p class="dark:text-slate-400 text-slate-500">
           I am passionate about teaching and mentoring students. I have taught
