--- a/src/components/buttons/DownloadButton.astro
+++ b/src/components/buttons/DownloadButton.astro
@@ -5,15 +5,16 @@ interface DownloadButton {
   text: string;
   url: string;
   isDownload: boolean;
+  extendClasses?: string;
 }
 
-const { text, url, isDownload } = Astro.props;
+const { text, url, isDownload, extendClass } = Astro.props;
 
 const buttonClasses = cntl`
-  btn
-  btn-outline
-  btn-active
-  btn-xs
+    btn-xs
+    btn
+    btn-outline  
+    ${extendClass} 
 `;
 ---
 
