--- a/src/components/pubs/Forthcoming.astro
+++ b/src/components/pubs/Forthcoming.astro
@@ -32,7 +32,7 @@ const { author, year, title, journal, url, pdf } =
     }. {year}. {title}. <em>{journal}</em>.
   </p>
   <dir class="flex space-x-2 mt-2 -ml-10 mb-4">
-    <DownloadButton text="View Online" url={url} />
+    <DownloadButton text="View Preprint" url={url} />
     {
       pdf && (
         <DownloadButton
