--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -83,6 +83,8 @@ import Background from "../components/Background.astro";
           journal="Zoologica Scripta"
           pageVol="50(2), pp. 141–154"
           doi="https://doi.org/10.1111/zsc.12460"
+          pdfUrl="https://www.researchgate.net/publication/346459790_Molecular_and_morphological_systematics_of_the_Bunomys_division_Rodentia_Muridae_an_endemic_radiation_on_Sulawesi?_tp=eyJjb250ZXh0Ijp7ImZpcnN0UGFnZSI6InB1YmxpY2F0aW9uIiwicGFnZSI6InByb2ZpbGUiLCJwcmV2aW91c1BhZ2UiOiJwcm9maWxlIiwicG9zaXRpb24iOiJwYWdlQ29udGVudCJ9fQ"
+          isRequest={true}
         />
         <Published
           author="Nations, J.A., Mursyid, A., Darma Busta, R., Adrian, S.P., Handika, H., Apandi, Achmadi, A.S. and Esselstyn, J.A"
@@ -91,6 +93,7 @@ import Background from "../components/Background.astro";
           journal="Mammalia"
           pageVol="85(2), pp.168-172"
           doi="https://doi.org/10.1515/mammalia-2020-0047"
+          pdfUrl="https://www.researchgate.net/publication/346783646_The_first_report_of_albinism_in_a_Sundaland_endemic_rodent?_tp=eyJjb250ZXh0Ijp7ImZpcnN0UGFnZSI6InB1YmxpY2F0aW9uIiwicGFnZSI6InByb2ZpbGUiLCJwcmV2aW91c1BhZ2UiOiJwcm9maWxlIiwicG9zaXRpb24iOiJwYWdlQ29udGVudCJ9fQ"
         />
       </Publication>
       <Publication year="2020">
@@ -101,6 +104,7 @@ import Background from "../components/Background.astro";
           journal="Check List, "
           pageVol="16(6), pp. 1695-1701"
           doi="https://doi.org/10.15560/16.6.1695"
+          pdfUrl="https://www.researchgate.net/publication/347398819_New_records_and_potential_geographic_distribution_of_Elongated_Caecilian_Ichthyophis_elongatus_Taylor_1965_Amphibia_Gymnophiona_Ichthyophiidae_endemic_to_West_Sumatra_Indonesia#fullTextFileContent"
         />
         <Published
           author="Winterhoff, M.L., Achmadi, A.S., Roycroft, E.J., Handika, H., Putra, R.T.J., Rowe, K.M.C., Perkins, S. and Rowe, K.C"
@@ -109,6 +113,7 @@ import Background from "../components/Background.astro";
           journal="Journal of Parasitology"
           pageVol="106(5), pp.523-536"
           doi="https://doi.org/10.1645/19-136"
+          pdfUrl="https://bioone.org/journalArticle/Download?urlId=10.1645%2F19-136"
         />
       </Publication>
       <Publication year="2019 and earlier">
@@ -119,6 +124,7 @@ import Background from "../components/Background.astro";
           journal="Journal of Mammalogy"
           pageVol="100(6), pp.1713-1725"
           doi="https://doi.org/10.1093/jmammal/gyz077"
+          pdfUrl="https://esselstyn.github.io/publications/2019/Esselstyn-2019.pdf"
         />
         <Published
           author="Janra, M.N., Noske, R.A., Chornelia, A., Handika, H., Mursyid, A., Agung, A. and Saputra, A"
@@ -127,6 +133,7 @@ import Background from "../components/Background.astro";
           journal="Kukila"
           pageVol="21, pp.13-16"
           doi=""
+          pdfUrl="https://hhandika.com/dl/janra-et-al-kukila.pdf"
         />
         <Published
           author="Demos, T.C., Achmadi, A.S., Handika, H., Rowe, K.C. and Esselstyn, J.A"
@@ -135,6 +142,7 @@ import Background from "../components/Background.astro";
           journal="Journal of Mammalogy"
           pageVol="98(1), pp.183-193"
           doi="https://doi.org/10.1093/jmammal/gyw183"
+          pdfUrl="https://esselstyn.github.io/publications/2017/Demos-2017.pdf"
         />
         <Published
           author="Demos, T.C., Achmadi, A.S., Giarla, T.C., Handika, H., Rowe, K.C. and Esselstyn, J.A"
@@ -143,6 +151,7 @@ import Background from "../components/Background.astro";
           journal="Molecular ecology"
           pageVol="25(20), pp.5158-5173"
           doi="https://doi.org/10.1111/mec.13820"
+          pdfUrl="https://esselstyn.github.io/publications/2016/Demos-2016.pdf"
         />
         <Published
           author="Esselstyn, J.A., Achmadi, A.S., Handika, H. and Rowe, K.C"
@@ -151,6 +160,7 @@ import Background from "../components/Background.astro";
           journal="Journal of Mammalogy"
           pageVol="96(5), pp.895-907"
           doi="https://doi.org/10.1093/jmammal/gyv093"
+          pdfUrl="https://esselstyn.github.io/publications/2015/Esselstyn-2015.pdf"
         />
         <Published
           author="Handika, H., Nurdin, J. and Rizaldi"
@@ -159,6 +169,7 @@ import Background from "../components/Background.astro";
           journal="Jurnal Biologi Universitas Andalas"
           pageVol="2(2), pp.103-109"
           doi="https://doi.org/10.25077/jbioua.2.2.%25p.2013"
+          pdfUrl="https://www.researchgate.net/publication/280605376_Komunitas_Mamalia_Kecil_Terestrial_di_Gunung_Singgalang_Sumatera_Barat"
         />
       </Publication>
     </div>
